--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
   <string name="submit">Submit</string>
   <string name="cancel">Cancel</string>
   <string name="credit_card_number_hint">Credit card number</string>
+  <string name="something_went_wrong">Something went wrong…</string>
+  <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal</string>
+  <string name="retry">Retry</string>
 </resources>
