--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
   <string name="something_went_wrong">Something went wrong…</string>
   <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal</string>
   <string name="retry">Retry</string>
+    <string name="add_to_list">add to list</string>
+  <string name="add_to_cart">add to cart</string>
 </resources>
