--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
   <string name="retry">Retry</string>
     <string name="add_to_list">add to list</string>
   <string name="add_to_cart">add to cart</string>
+    <string name="ship_or">ship or</string>
 </resources>
